--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "name": "warryorsgym1",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
