--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.0",
     "nodemon": "^2.0.20"
   }
 }
